Add setup info
Signed-off-by: Nathalie Jonathan <nathhjo@amazon.com>